# learngit

./: .gitignore  prd-00.md  prd-01.md  prd-03.md  readme.txt
edge_ai_app/: DELIVERY_SUMMARY.md  DEVELOPMENT.md  MODEL_DOWNLOAD_GUIDE.md  MODEL_SELECTION_GUIDE.md  README.md  UPDATE_SUMMARY.md  pubspec.yaml
edge_ai_app/android/app/: build.gradle.kts
edge_ai_app/android/app/src/main/: AndroidManifest.xml
edge_ai_app/android/app/src/main/kotlin/com/example/edge_ai_app/: MainActivity.kt
edge_ai_app/lib/: main.dart
edge_ai_app/lib/core/engine/: llama_engine.dart
edge_ai_app/lib/core/models/: message.dart
edge_ai_app/lib/core/services/: chat_service.dart  model_service.dart
edge_ai_app/lib/features/chat/: chat_screen.dart
edge_ai_app/lib/features/settings/: model_management_screen.dart
edge_ai_app/native/: CMakeLists.txt  dummy_llama.cpp  llama_wrapper.cpp  llama_wrapper.h
edge_ai_app/native/scripts/: build_android.sh  build_ios.sh
edge_ai_app/scripts/: download_model.sh
edge_ai_app/test/: widget_test.dart
